# struct-view

./: .gitignore  AGENTS.md  Makefile  README.md  run.sh
.claude/: settings.local.json
.github/copilot/instructions/: project-overview.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/structview/: main.py  models.py  validation.py
backend/tests/: test_api.py  test_health.py
data/: Cabinet.stl  cube.stl
docs/: structural_tool_spec.md
docs/plans/: .clasi.db
docs/plans/reflections/: 2026-02-15-sprint-close-incomplete.md  2026-02-18-informal-reflection.md  2026-02-18-no-sprint-branch.md  2026-02-18-tickets-not-moved-to-done.md
docs/plans/todo/: 2d-editor-undo-redo.md  3d-viewport-scroll-blocked-during-node-drag.md  axes-orientation-cube-alignment.md  beam-properties-and-loading.md  grid-alignment-angled-planes.md  mcp-server-ai-model-interface.md  sidebar-property-editor-beam-length.md  stl-import-scale-correction.md  truss-editor-clear-button.md  truss-library-placement-below-x-axis.md  unit-display-imperial-metric.md  view-cube-navigation.md  viewport-mouse-controls.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CameraActionExecutor.tsx  Canvas2DEditor.tsx  DimensionOverlay.tsx  DragSelect.tsx  DuplicateDialog.tsx  EditorToolbar.tsx  FileToolbar.tsx  FocusCameraController.tsx  FocusOverlay.tsx  GroundPlane.tsx  GroupPanel.tsx  KeyboardHandler.tsx  MemberLine.tsx  NodeDragger.tsx  NodeMesh.tsx  NodePlacer.tsx  PlacementPanel.tsx  PlacementPreview.tsx  PlaneGrid.tsx  (+17 more)
(+320 files in other folders)
